<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:textSize="34sp"
            app:contentScrim="?colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:background="@tools:sample/backgrounds/scenic"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/abc_ic_ab_back_material" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/detail_poster"
                android:layout_width="116dp"
                android:layout_height="175dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:contentDescription="@string/this_is_a_poster_image"
                android:elevation="8dp"
                android:scaleType="centerCrop"
                android:transitionName="transition_poster"
                tools:background="?attr/colorPrimary" />

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/detail_poster"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@id/detail_poster"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="This is the Movie Title" />

            <LinearLayout
                android:id="@+id/details_release_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_title"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/detail_poster"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/details_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto"
                    android:textSize="14sp"
                    tools:text="Apr 25, 2018" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_score_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/details_release_layout"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@id/detail_poster"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detail_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center_vertical"
                    android:textColor="?colorPrimary"
                    android:textSize="20sp"
                    app:drawableLeftCompat="@drawable/ic_star"
                    tools:text="5.9" />
            </LinearLayout>

            <TextView
                android:id="@+id/detail_genre"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/detail_score_layout"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@id/detail_poster"
                android:fontFamily="@font/roboto"
                android:textSize="16sp"
                tools:text="Adventure, Action, Science Fiction" />

            <TextView
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/detail_poster"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/detail_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/description_text"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto"
                android:textSize="16sp"
                tools:text="@tools:sample/lorem/random" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="?attr/colorPrimary" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/add_to_favorite"
        android:elevation="8dp"
        android:src="@drawable/ic_favorite"
        app:layout_anchor="@id/nestedScrollView"
        app:layout_anchorGravity="end|top" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>