<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/main_favorite"
        android:icon="@drawable/ic_favorited"
        android:title="@string/favorite"
        app:showAsAction="always"
        tools:targetApi="o" />
</menu>